 2011-11-14 23:09  hvlad 
   M src/utilities/ntrace/fbtrace.conf
Update documentation

 2011-11-06 23:38  hvlad 
   M src/jrd/dyn_del.epp
Additional fix for CORE-3557 : AV in engine when preparing query against dropping table
Also fixed CORE-3579 : Can't drop table when computed field depends on later created another field

 2011-11-05 20:51  asfernandes 
   M src/jrd/intl.cpp
Fixed CORE-3650 - Recreation of collation leads to FB "death".

 2011-10-31 18:35  alexpeshkoff 
   M src/common/fb_exception.cpp
   M src/common/thd.cpp
   M src/common/thd.h
Fixed CORE-3646: Segmentation fault in multi-threaded program when using 2.5.x client library on Linux

 2011-10-16 14:11  hvlad 
   M src/jrd/trace/TraceConfigStorage.cpp
One more assertion

 2011-10-16 13:59  hvlad 
   M src/jrd/trace/TraceConfigStorage.cpp
Missed semicolon

 2011-10-16 13:49  hvlad 
   M src/jrd/trace/TraceConfigStorage.cpp
   M src/jrd/trace/TraceConfigStorage.h
Fixed bug CORE-3636 : Firebird 2.5.1 server crashes with Trace API

 2011-10-13 11:52  alexpeshkoff 
   M builds/install/arch-specific/linux/misc/firebird.init.d.suse.in
misc

 2011-10-12 19:00  hvlad 
   M src/jrd/idx.cpp
Backported fix for bug CORE-3631 : Duplicate records with NULLs checked incorrectly

 2011-10-12 11:58  alexpeshkoff 
   M builds/posix/make.defaults
   M builds/posix/make.rules
Backported fixes for CORE-3605 and CORE-3606

 2011-10-12 09:52  alexpeshkoff 
   M src/common/cvt.cpp
Fixed CORE-3627: Server crashes with access violation when inserting row into table with unique index

 2011-10-11 12:00  alexpeshkoff 
   M src/remote/inet_server.cpp
Backported fix for CORE-3607: Solaris does not define the RLIMIT_NPROC limit

 2011-10-11 11:51  alexpeshkoff 
   M src/remote/inet_server.cpp
Fixed CORE-3609: Option -t displayed twice by fb_inet_server -h

 2011-10-11 10:29  alexpeshkoff 
   M src/jrd/os/posix/isc_ipc.cpp
Porting - some Debians miss SA_SIGINFO, committed fixing it patch by Samuel Thibault
